--- a/build.xml
+++ b/build.xml
@@ -83,7 +83,7 @@
 	<!-- ant import -Dfile=<INDEXER_DATA_XML_FILE> -->
 	<!-- EXAMPLE: ant import -Dfile=dir1/dir2/indexer_data.xml -->
 	<target name="import" depends="compile" description="import indexer data">
-		<copy file="${empty-db-file}" tofile="${db-file}" overwrite="true"/>
+		<copy file="${empty-db-file}" tofile="${db-file}" overwrite="true"/> <!-- DELETE THIS LINE...? -->
 		<java classname="THE NAME OF YOUR DATA IMPORTER CLASS GOES HERE" fork="yes">
 			<classpath>
 				<path refid="all-classpath"/>
