Select from image, form entry styles, loading project and stuff.

--- a/userProperties/sheila.properties
+++ b/userProperties/sheila.properties
@@ -1,12 +1,15 @@
-#Sun Apr 12 01:06:13 MDT 2015
-windowSizeY=537
-windowSizeX=661
-scale=1.0
-mainSplitLocation=12
+#Mon Apr 13 14:32:24 MDT 2015
+windowSizeY=760
+batchImageUrl=images/1890_image0.png
+windowSizeX=924
+highlightsVisible=true
+scale=0.5
+mainSplitLocation=440
 imageInverted=false
-translationY=0
-translationX=0
+translationY=-8
+translationX=34
+projectId=1
 highlightsVisble=false
-bottomSplitLocation=156
-windowPosY=287
-windowPosX=375
+bottomSplitLocation=396
+windowPosY=179
+windowPosX=387
