Created table, table updates, set new layouts, added field help, added properties values.

--- a/userProperties/sheila.properties
+++ b/userProperties/sheila.properties
@@ -1,15 +1,15 @@
-#Mon Apr 13 14:32:24 MDT 2015
-windowSizeY=760
+#Mon Apr 13 22:03:53 MDT 2015
 batchImageUrl=images/1890_image0.png
-windowSizeX=924
+windowSizeY=486
+windowSizeX=880
 highlightsVisible=true
-scale=0.5
-mainSplitLocation=440
+scale=0.375
+mainSplitLocation=158
 imageInverted=false
-translationY=-8
-translationX=34
+translationY=115
 projectId=1
-highlightsVisble=false
-bottomSplitLocation=396
-windowPosY=179
-windowPosX=387
+translationX=5
+bottomSplitLocation=423
+windowPosY=109
+values=asdf,,,;,,,;,aasdf,,;,,,;,,,;,,,;,,,;,,,
+windowPosX=206
