Field entry now matches model, but can't get the dang properties to load properly.

--- a/userProperties/sheila.properties
+++ b/userProperties/sheila.properties
@@ -1,15 +1,15 @@
-#Mon Apr 13 22:03:53 MDT 2015
+#Tue Apr 14 01:28:17 MDT 2015
 batchImageUrl=images/1890_image0.png
-windowSizeY=486
-windowSizeX=880
+windowSizeY=600
+windowSizeX=837
 highlightsVisible=true
-scale=0.375
-mainSplitLocation=158
+scale=0.5
+mainSplitLocation=344
 imageInverted=false
-translationY=115
+translationY=71
 projectId=1
-translationX=5
-bottomSplitLocation=423
-windowPosY=109
-values=asdf,,,;,,,;,aasdf,,;,,,;,,,;,,,;,,,;,,,
-windowPosX=206
+translationX=54
+bottomSplitLocation=397
+windowPosY=228
+values=asdf,,asdfasd,;,,,;,,,;,a,asda,;,,,;asdfasdf,,,asdf;,,,;,asdf,,
+windowPosX=200
