--- a/build.xml
+++ b/build.xml
@@ -157,7 +157,7 @@
 	<!-- If host and/or port number are omitted, default values are used. -->
 	<!-- EXAMPLE: ant client -->
 	<target name="client" depends="compile" description="run client using server on specified host and port">
-				<java classname="THE NAME OF YOUR CLIENT CLASS GOES HERE" fork="yes">
+				<java classname="client.ClientMain" fork="yes">
 			<classpath>
 				<path refid="all-classpath"/>
 			</classpath>
